# ProjectViolenceDocs

./: .gitignore  .readthedocs.yaml  AddingPyIntegration.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTIBUTING.md  CONTRIBUTING.md  CONTRIBUTING_template.md  LICENSE  README.md  README.txt  README_template.md  conf.py  envs.toml  h origin main  live_preview.sh  pyproject.toml  requirements.txt  setup-hooks.sh  setup-python.sh  setup_for_contributors.sh  setupbasic.sh  setupwithoptions.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: alt-setup-submission.yml  doc_bug_report.yml  documentation_improvement.yml  feature_request.yml  tool_bug_report.yml
.github/workflows/: deploy.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
docs/: Makefile
docs/source/: alt-setups.rst  altsetups.rst  api-reference.rst  conf.py  contrib-maintain.rst  contrib.rst  contributing.rst  features.rst  index.rst  installation.rst  keybindings.rst  maintenance.rst  modules.rst  onboarding.rst  other-guides.rst  pymodulefordocs.rst  setup.rst  troubleshooting.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/: 404.html
docs/source/_troubleshooting/: contribu-trouble.rst  keybind-trouble.rst  setup-trouble.rst  usage-trouble.rst
docs/source/user/: blender-basics.rst  cheat-sheet.md  keybindings.rst  operators.rst  setup.rst  tests.rst  troubleshooting.rst  usage.rst  use-cases.rst  versioning.rst
docs/src/: conf.py  index.rst
hooks/: commit-msg  post-commit  post-release  pre-commit  pre-push  prepare-commit-msg
