[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------
# PEP 621 Metadata (Project Info)
# -----------------------------------------------------------------
[project]
name = "projectviolencedocs"
version = "0.1.0"
description = "Documentation for Project Violence"
readme = "README.md"
license = {text = "CC-BY-SA-4.0"}
authors = [
    {name = "Danweel", email = "daniil.woodland@pm.me"},
    {name = "Community"}
]
requires-python = ">=3.11"

# -----------------------------------------------------------------
# Poetry Configuration
# -----------------------------------------------------------------
[tool.poetry]
# This tells Poetry: "I am not a Python package, just a project with dependencies"
package-mode = false
packages = []

# -----------------------------------------------------------------
# Dependency Groups
# -----------------------------------------------------------------
# These are used with: poetry install --with docs OR --with dev

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
readthedocs-build = "^2.0"
sphinxcontrib-mermaid = "^2.0.1"
sphinx-notfound-page = "^1.0.0"
myst-parser = "^5.0.0"
groundwork-sphinx-theme = "^1.1.1"
sphinx-rtd-theme = "^3.1.0"
furo = "^2025.12.19"

[tool.poetry.group.dev.dependencies]
# Inherits from docs, plus extra tools
sphinx = "^8.0"
readthedocs-build = "^2.0"
sphinxcontrib-mermaid = "^2.0.1"
sphinx-notfound-page = "^1.0.0"
myst-parser = "^5.0.0"
groundwork-sphinx-theme = "^1.1.1"
ruff = "^0.6"
# pytest = "^8.0"  # Uncomment if you add testing later